@@ -867,10 +867,11 @@ void HTMLTokenizer::parseTag(TokenizerString &src)
                         // Fix bug 34302 at kde.bugs.org.  Go ahead and treat
                         // <!--> as a valid comment, since both mozilla and IE on windows
                         // can handle this case.  Only do this in quirks mode. -dwh
-                        if (*src == '>' && parser->doc()->inCompatMode()) {
+                        if (!src.isEmpty() && *src == '>' && parser->doc()->inCompatMode()) {
                           comment = false;
                           ++src;
-                          cBuffer[cBufferPos++] = src->cell();
+                          if (!src.isEmpty())
+                              cBuffer[cBufferPos++] = src->cell();
                         }
 		        else
                           parseComment(src);
